Mise a jour de la page de garde

--- a/CssHtml9.html
+++ b/CssHtml9.html
@@ -24,29 +24,10 @@
 		<nav>
 				<ul id="Menu">
 					<li><a href="#">Retour à la page Principale</a></li>
-					<li>
-						<a href="#">But du jeu</a>
-							<ul>
-								<li><a href="#">But Primaire</a></li>
-								<li><a href="#">But secondaire</a></li>
-							</ul>
-					</li>
-					<li>
-						<a href="#">Règles</a>
-							<ul>
-								<li><a href="#">Regle 1</a></li>
-								<li><a href="#">Regle 2</a></li>
-							</ul>
-					</li>		
-					<li>
-						<a href="#">Photos</a>
-										<ul>
-								<li><a href="#">Album 1</a></li>
-								<li><a href="#">Album 2</a></li>
-							</ul>
-					</li>
+					<li><a href="CssHtml9Dessin1.html">But du jeu</a></li>
+					<li><a href="CssHtml9Dessin2.html">Règles</a></li>
+					<li><a href="CssHtml9Dessin3.html">Photos</a></li>
 					<li><a href="CssHtml9About.html">Aide</a></li>
-					
 				<ul/>
 		</nav>
 
