Terrain_jours_encadrement

--- a/CssHtml9Dessin1.html
+++ b/CssHtml9Dessin1.html
@@ -18,7 +18,7 @@
 		
 			<div class="titre">
 			<h1> Le Rugby pour les nuls </h1>
-		</div>
+			</div>
 
 		
 		<nav>
@@ -62,10 +62,9 @@
 				</div>
 			
 			</div>
+		Le Rugby se joue à 15 contre 15 et il faut aplatir le ballon dans le camps adverse.
 			
 
-		
-		</div>	
 	</section>
 	
 	<footer>
